6 task modification continues

--- a/6-task/index.html
+++ b/6-task/index.html
@@ -5,41 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>6_task</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-    <h1>Sign Up</h1>
-    <h2>It's free and it only takes a minute</h2><!make this a parag -->
-    <form >
-        <div class=''
-        <p>First name</p>
-    <input type="text" />
-    <p>Last name</p>
-    <input type="text" />
-    <p>Email</p>
-    <input type="email" />
-    <p>Password</p>
-    <input type="password" />
-    <p>Confirm password</p>
-    <form>
-      <input type="password" />
-    </form>
-    <form><button type="submit">SIGN UP</button></form> <!make this hover, color chocolate-->
+      <h1>Sign Up</h1>
+      <br />
+      <p>It's free and it only takes a minute</p>
 
-    <p>
-      By clicking the Sign Up button, you agree to our
-      <a href="Terms&Conditions">Terms & Conditions</a> and
-      <a href="PrivacyPolicy">Privacy Policy</a>
-    </p>
-</form>
+      <form>
+        <div class="firstName">
+          <label for="firstName">First name</label><br />
+          <input type="text" />
+        </div>
+        <div class="lastName">
+          <label for="lastName">Last name</label><br />
+          <input type="text" />
+        </div>
+        <div class="email">
+          <label for="email">Email</label><br />
+          <input type="email" />
+        </div>
+        <div class="password">
+          <label for="password">Password</label><br />
+          <input type="password" />
+        </div>
+        <div class="confirmPassword">
+          <label for="confirmPassword">Confirm password</label><br />
+          <input type="password" />
+        </div>
+      </form>
+      <br />
+      <form><button type="submit">SIGN UP</button></form>
+      <br />
+      <!make this hover, color chocolate-->
+
+      <div class="disclaimer">
+        By clicking the Sign Up button, you agree to our<a
+          href="Terms&Conditions"
+        >
+          Terms & Conditions</a
+        >
+        and<a href="PrivacyPolicy"> Privacy Policy</a>
+      </div>
+    </div>
   </body>
-</div>
+
   <footer>
-      <p>Already have an account? <a href="LoginHere">Login Here</a>
-      </p>
+    <div class="footer">
+      Already have an account? <a href="LoginHere">Login Here</a>
+    </div>
   </footer>
 </html>
