styling for task 6 and HTML for task 7

--- a/6-task/index.html
+++ b/6-task/index.html
@@ -13,27 +13,26 @@
   <body>
     <main>
       <div class="container">
-        <h1>Sign Up</h1>
-        <p>It's free and it only takes a minute</p>
-
+        <h1 class="mb20">Sign Up</h1>
+        <p class="mb20">It's free and it only takes a minute</p>
         <form>
-          <div class="formGroup">
+          <div class="form-group mb20">
             <label for="firstName">First name</label>
-            <input type="text" name="lastname" id="lastname" />
+            <input type="text" name="firstname" id="firstname" />
           </div>
-          <div class="formGroup">
+          <div class="form-group mb20">
             <label for="lastName">Last name</label>
             <input type="text" name="lastname" id="lastname" />
           </div>
-          <div class="formGroup">
+          <div class="form-group mb20">
             <label for="email">Email</label>
             <input type="email" name="email" id="email" />
           </div>
-          <div class="formGroup">
+          <div class="form-group mb20">
             <label for="password">Password</label>
             <input type="password" name="password" id="password" />
           </div>
-          <div class="formGroup">
+          <div class="form-group mb20">
             <label for="ConfirmPassword">Confirm password</label>
             <input
               type="password"
@@ -41,11 +40,11 @@
               id="confirmPassword"
             />
           </div>
-          <button type="submit">Sign up</button>
+          <button class="mb20" type="submit">Sign up</button>
           <!--style as capital letters in CSS-->
         </form>
 
-        <p>
+        <p class="bbottom-text">
           By clicking the Sign Up button, you agree to our<a href="#">
             Terms & Conditions</a
           >
