--- a/7_task_3rd wk recap/index.html
+++ b/7_task_3rd wk recap/index.html
@@ -32,7 +32,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Explicabo sit inventore optio harum n
             </p>
-            <a href="#">read more</a>
+            <a href="#">Read more</a>
           </div>
         </div>
       </div>
@@ -54,71 +54,75 @@
       <!--if floating does not work!-->
     </main>
     <footer>
-      <div class="container">
-        <form>
-          <h2>Contact us</h2>
-          <div class="form-group">
-            <div class="firstName">
-              <label for="firstName">First name</label>
-              <input type="text" />
-            </div>
-            <div class="lastName">
-              <label for="lastName">Last name</label>
-              <input type="text" />
-            </div>
-            <div class="email">
-              <label for="email">Email</label>
-              <input type="email" />
-            </div>
-          </div>
-          <h2>Do you want to join with our newsletter?</h2>
-          <div class="form-group">
-            <div>
-              <input type="radio" />
-              <label for="yes">Yes</label>
-            </div>
-            <div>
-              <input type="radio" />
-              <label for="no">No</label>
-            </div>
-          </div>
-          <h2>How did you find us?</h2>
-          <div class="form-group">
-            <div>
-              <input type="checkbox" />
-              <label for="1">friend told me</label>
-            </div>
-            <div>
-              <input type="checkbox" />
-              <label for="2">found in the Internet</label>
-            </div>
-            <div>
-              <input type="checkbox" />
-              <label for="3">saw in social media</label>
-            </div>
-            <div>
-              <input type="checkbox" />
-              <label for="4">other</label>
-            </div>
-            <div>
-              <textarea
-                id="text"
-                name="freeTextArea"
-                rows="1"
-                cols="20"
-              ></textarea>
-            </div>
-          </div>
-        </form>
-        <div class="footerText">
-          <h2>Lorem ipsum dolor sit amet.</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            doloribus commodi blanditiis omnis maiores ducimus alias
-            necessitatibus nesciunt qui aliquid!
-          </p>
-        </div>
+      <div>
+        <h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam,
+          mollitia.
+        </h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed
+          inventore iste voluptatibus qui, fugit ipsa explicabo veniam libero
+          voluptatem nemo! Consequuntur minima possimus animi facilis quisquam
+          quia. Numquam neque laboriosam temporibus, dolor, commodi molestiae
+          accusantium sapiente repudiandae autem est, necessitatibus minima ex
+          eos eveniet a explicabo. Ab dicta quam consectetur.
+        </p>
       </div>
+      <form>
+        <h2>Contact us</h2>
+        <div class="form-group">
+          <div class="firstName">
+            <label for="firstName">First name</label>
+            <input type="text" />
+          </div>
+          <div class="lastName">
+            <label for="lastName">Last name</label>
+            <input type="text" />
+          </div>
+          <div class="email">
+            <label for="email">Email</label>
+            <input type="email" />
+          </div>
+        </div>
+        <h2>Do you want to join with our newsletter?</h2>
+        <div class="form-group">
+          <div>
+            <input type="radio" />
+            <label for="yes">Yes</label>
+          </div>
+          <div>
+            <input type="radio" />
+            <label for="no">No</label>
+          </div>
+        </div>
+        <h2>How did you find us?</h2>
+        <div class="form-group">
+          <div>
+            <input type="checkbox" />
+            <label for="1">friend told me</label>
+          </div>
+          <div>
+            <input type="checkbox" />
+            <label for="2">found in the Internet</label>
+          </div>
+          <div>
+            <input type="checkbox" />
+            <label for="3">saw in social media</label>
+          </div>
+          <div>
+            <input type="checkbox" />
+            <label for="4">other</label>
+          </div>
+          <div>
+            <textarea
+              id="text"
+              name="freeTextArea"
+              rows="1"
+              cols="20"
+            ></textarea>
+          </div>
+        </div>
+      </form>
     </footer>
   </body>
 </html>
