--- a/7_task_3rd wk recap/index.html
+++ b/7_task_3rd wk recap/index.html
@@ -29,100 +29,101 @@
           <div class="content">
             <h2>Welcome to our homepage</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Explicabo sit inventore optio harum n
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+              quod necessitatibus autem et natus deserunt odit libero nesciunt
+              fugit cum? Cum labore impedit et, laudantium soluta optio eaque
+              mollitia omnis fugiat sequi cumque architecto similique. Non nulla
+              qui autem iste.
             </p>
             <a href="#">Read more</a>
           </div>
         </div>
       </div>
 
-      <div id="aboutUs">
+      <div id="about">
         <div class="container">
           <div class="texts">
             <h2>About us</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-              similique quos reprehenderit doloremque eius enim vero nobis fugit
-              facilis earum?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui illo
+              atque eaque cumque explicabo doloribus accusamus, suscipit, natus
+              odit consequuntur ipsa iure cupiditate soluta aliquam deleniti
+              illum ex, aut sed ab? Natus illum provident at totam voluptates
+              veniam nam id facere! Molestias molestiae laudantium rerum culpa
+              quisquam dicta rem error.
             </p>
           </div>
-          <img src="https://source.unsplash.com/3rfH2GOflo8/400x400" />
+          <img src="https://source.unsplash.com/3rfH2GOflo8/1200x1200" />
         </div>
       </div>
       <div class="clearfix"></div>
-      <!--if floating does not work!-->
+      <!--if floating does not work! see css-file!-->
     </main>
     <footer>
-      <div>
-        <h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam,
-          mollitia.
-        </h3>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed
-          inventore iste voluptatibus qui, fugit ipsa explicabo veniam libero
-          voluptatem nemo! Consequuntur minima possimus animi facilis quisquam
-          quia. Numquam neque laboriosam temporibus, dolor, commodi molestiae
-          accusantium sapiente repudiandae autem est, necessitatibus minima ex
-          eos eveniet a explicabo. Ab dicta quam consectetur.
-        </p>
+      <div class="container">
+        <form>
+          <h2>Contact us</h2>
+          <div class="form-group">
+            <label for="firstName" name="firstname">First name</label>
+            <input type="text" id="firstname" />
+          </div>
+          <div class="form-group">
+            <label for="lastName" name="lastname">Last name</label>
+            <input type="text" id="lastname" />
+          </div>
+          <div class="form-group">
+            <label for="email" name="email">Email</label>
+            <input type="text" id="email" />
+          </div>
+          <h3>Do you want to join with our newsletter?</h3>
+          <div class="form-group">
+            <input type="radio" id="join-yes" name="newsletter" />
+            <!-- both (or all) radiobuttons need same name otherwise they do not know where to compare (one can select all bittons). The sanme data is also send to server for registering if one wants to join newsletter or not-->
+            <label for="join-yes">Yes</label>
+          </div>
+          <div class="form-group">
+            <input type="radio" id="join-no" name="newsletter" />
+            <label for="join-no">No</label>
+          </div>
+
+          <h3>How did you find us?</h3>
+            <div class="form-group">
+            
+              <input type="checkbox" id="friend" name="friend" />
+              <label for="friend">Friend told me</label>
+            </div>
+            <div class="form-group">
+              <input type="checkbox" id="internet" name="internet" />
+              <label for="internet">Internet</label>
+            </div>
+            <div class="form-group">
+              <input type="checkbox" id="some" name="some" />
+              <label for="some">Social media</label>
+            </div>
+            <div class="form-group">
+              <input type="checkbox" id="other" name="other" />
+              <label for="other">Other:</label>
+            </div>
+            <textarea id="message" name="message" placeholder="How?"></textarea>
+            <button type="submit">Send</button>
+            <button type="reset">Clear</button>
+          </div>
+        </form>
+        <div class="right">
+          <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam,
+            mollitia.
+          </h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed
+            inventore iste voluptatibus qui, fugit ipsa explicabo veniam libero
+            voluptatem nemo! Consequuntur minima possimus animi facilis quisquam
+            quia. Numquam neque laboriosam temporibus, dolor, commodi molestiae
+            accusantium sapiente repudiandae autem est, necessitatibus minima ex
+            eos eveniet a explicabo. Ab dicta quam consectetur.
+          </p>
+        </div>
       </div>
-      <form>
-        <h2>Contact us</h2>
-        <div class="form-group">
-          <div class="firstName">
-            <label for="firstName">First name</label>
-            <input type="text" />
-          </div>
-          <div class="lastName">
-            <label for="lastName">Last name</label>
-            <input type="text" />
-          </div>
-          <div class="email">
-            <label for="email">Email</label>
-            <input type="email" />
-          </div>
-        </div>
-        <h2>Do you want to join with our newsletter?</h2>
-        <div class="form-group">
-          <div>
-            <input type="radio" />
-            <label for="yes">Yes</label>
-          </div>
-          <div>
-            <input type="radio" />
-            <label for="no">No</label>
-          </div>
-        </div>
-        <h2>How did you find us?</h2>
-        <div class="form-group">
-          <div>
-            <input type="checkbox" />
-            <label for="1">friend told me</label>
-          </div>
-          <div>
-            <input type="checkbox" />
-            <label for="2">found in the Internet</label>
-          </div>
-          <div>
-            <input type="checkbox" />
-            <label for="3">saw in social media</label>
-          </div>
-          <div>
-            <input type="checkbox" />
-            <label for="4">other</label>
-          </div>
-          <div>
-            <textarea
-              id="text"
-              name="freeTextArea"
-              rows="1"
-              cols="20"
-            ></textarea>
-          </div>
-        </div>
-      </form>
     </footer>
   </body>
 </html>
