--- a/10_task flex, homework/index.html
+++ b/10_task flex, homework/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>9_task flex examples</title>
+    <title>10_task flex examples</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap"
@@ -23,10 +23,12 @@
     </nav>
   </header>
   <main>
-    <div id="postTitle">Post Title</div>
-    <div id="postMeta">Post Meta</div>
-    <div id="mainContent">Main Content</div>
-    <img src="https://source.unsplash.com/d7Rrx5Ztm_o/500x400" />
+    <section>
+      <div id="postTitle">Post Title</div>
+      <div id="postMeta">Post Meta</div>
+      <div id="mainContent">Main Content</div>
+      <img src="https://source.unsplash.com/d7Rrx5Ztm_o/500x400" />
+    </section>
     <div class="leftSideBar">
       <div id="sideBar">Side Bar</div>
       <div id="ads">Ads</div>
