--- a/11_task pseudo classes_elements/index.html
+++ b/11_task pseudo classes_elements/index.html
@@ -36,10 +36,7 @@
     <main>
       <section id="hero-banner">
         <div class="container">
-          <h1>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Voluptatibus, quo!
-          </h1>
+          <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut libero,
             ratione quibusdam quidem magnam earum odio? Neque commodi
@@ -69,66 +66,6 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
           voluptates incidunt necessitatibus non voluptatibus totam distinctio
           sunt iure officiis vero! THIS PARAGRAPH HAS POSITION:STICKY!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          voluptates incidunt necessitatibus non voluptatibus totam distinctio
-          sunt iure officiis vero!
         </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
