10_task flexboxes: margins added to divs header  and footer

--- a/10_task flex, homework/index.html
+++ b/10_task flex, homework/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <header>
-    <div id="upperLeftCorner">
+    <div id="siteTitle">
       <p>Site title</p>
     </div>
     <nav>
@@ -23,13 +23,17 @@
     </nav>
   </header>
   <main>
-    <section>
+    <div id="leftMain">
       <div id="postTitle">Post Title</div>
-      <div id="postMeta">Post Meta</div>
-      <div id="mainContent">Main Content</div>
-      <img src="https://source.unsplash.com/d7Rrx5Ztm_o/500x400" />
-    </section>
-    <div class="leftSideBar">
+      <div id="metaContentImg">
+        <div id="postMeta">Post Meta</div>
+        <div id="contentImg">
+          <div id="mainContent">Main Content</div>
+          <div id="mainContentImage">Main Content Image</div>
+        </div>
+      </div>
+    </div>
+    <div id="rightSideBar">
       <div id="sideBar">Side Bar</div>
       <div id="ads">Ads</div>
       <div id="otherStuff">Other Stuff</div>
