added sample codes from Margit and solved grid challenge

--- a/grid-challenge/index.html
+++ b/grid-challenge/index.html
@@ -7,37 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <section id="gridContainer">
       <header>
         <div id="siteTitle">Site Title</div>
-        <nav>
-          <ul>
-            <li id="nav1">Nav 1</li>
-            <li id="nav2">Nav 2</li>
-            <li id="nav3">Nav 3</li>
-          </ul>
-        </nav>
+        <div id="nav1">Nav 1</div>
+        <div id="nav2">Nav 2</div>
+        <div id="nav3">Nav 3</div>
       </header>
-      <section>
-        <div id="titleMetaContentImg">
-          <div id="postTitle">Post Title</div>
-          <div id="metaContentImg">
-            <div id="postMeta">Post Meta</div>
-            <div id="contentImg">
-              <div id="content">Main Content</div>
-              <div id="contentImg">Main Content Image</div>
-            </div>
-          </div>
-        </div>
-        <div id="side">
-          <div id="sideBar">Side Bar</div>
-          <div id="ads">Ads</div>
-          <div id="otherStuffs">Other Stuffs</div>
-        </div>
-      </section>
-      <footer>
-        <p>@2018 footer</p>
-      </footer>
-    </main>
+      <main>
+        <div id="postTitle">Post Title</div>
+        <div id="postMeta">Post Meta</div>
+        <div id="content">Main Content</div>
+        <div id="contentImg">Main Content Image</div>
+        <div id="sideBar">Side Bar</div>
+        <div id="ads">Ads</div>
+        <div id="otherStuffs">Other Stuffs</div>
+        <div id="footer">@2018 footer</div>
+      </main>
+    </section>
   </body>
 </html>
