--- a/17_task_animations challenge/index.html
+++ b/17_task_animations challenge/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transform, animations and transitions challenge</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -44,7 +48,7 @@
         top to bottom, and back right to left and bottom to top. Make animation
         to pause when hovering object.
       </p>
-      <div class="animated-circle">Try to catch me!</div>
+      <div class="animated-circle">Catch me!</div>
     </section>
     <section>
       <h2>7. Alive background</h2>
