16_task added Menu element with underline hover effect

--- a/16_task_transformation_animation/index.html
+++ b/16_task_transformation_animation/index.html
@@ -13,5 +13,8 @@
   <body>
     <div class="card">Example card</div>
     <div class="circle">Animated circle</div>
+    <div class="menuItem">
+      <h1>Menu element</h1>
+    </div>
   </body>
 </html>
