--- a/16_task_transformation_animation/index.html
+++ b/16_task_transformation_animation/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="card">Example card</div>
     <div class="circle">Animated circle</div>
-    <div class="menuItem">
+    <div class="menu-item">
       <h1>Menu element</h1>
     </div>
   </body>
