17_task, background image added and borders made wider

--- a/17_task_animations challenge/index.html
+++ b/17_task_animations challenge/index.html
@@ -54,7 +54,7 @@
       <h2>7. Alive background</h2>
       <p>
         Make an animation, where background gradient colours change in loop
-        mode.
+        mode. Or choose a background picture and make it move smoothly.
       </p>
     </section>
   </body>
