Reordering 15_task files

--- a/15_task_jobs_in_Finland/index.html
+++ b/15_task_jobs_in_Finland/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jobs in Finland - Jobs in Finland</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon"/>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <header>
@@ -20,18 +20,20 @@
               <a href="#">Jobs in <strong>Finland</strong></a>
             </div>
             <div id="link">
-              <a href="#">»Work in Finland</a>
+              <a href="#"
+                ><i class="material-icons">double_arrow</i> Work in Finland</a
+              >
             </div>
           </div>
           <div id="headerBottom">
             <nav>
               <!--START 
                 This is for mobile and tablet, "Hamburger menu" and "close"-->
-              <div id="openMenu" class="icon menu" onclick="openMenu()">
+              <div id="openMenu" class="icon menu" class="hide" onclick="openMenu()">
                   <i class="material-icons">menu</i>
               </div>
-              <div id="closeMenu" class="icon close" onclick="closeMenu()">
-                <i class="material-icons">close</i>
+              <div id="closeMenu" class="icon close" class="hide"  onclick="closeMenu()">
+                <i class="material-icons"></i>
             </div>
                <!--END 
                 mobile and tablet, "Hamburger menu" and "close"-->
@@ -56,10 +58,18 @@
                 <li><a href="#">For employers</a></li>
               </ul>
             </nav>
-            <div id="search">
-              <a href="#"
-              ><i class="material-icons">double_arrow</i> Work in Finland</a
-            >
+            <div class="search">
+              <div class="btn" onclick="showHide()">
+                <i class="material-icons">search</i>
+              </div>
+              <div id="search-form" class="hide">
+                <form>
+                  <input type="text" placeholder="Search" />
+                  <button class="btn btn-primary" type="submit">
+                    <i class="material-icons">search</i>
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -329,6 +339,6 @@
       </div>
     </footer>
    
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
